--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -23,6 +23,7 @@
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h4 class="mb-0">Exchanges</h4>
+                            <a href="{{ url_for('dashboard.settings') }}" class="btn btn-secondary btn-sm">Add Exchange</a>
                     </div>
                     <div class="card-body p-0">
                         <table class="table mb-0">
@@ -64,7 +65,7 @@
     
     <div class="row">
         <div class="col-md-12">
-            <div class="automations-container mb-4">
+            <div class="automations-container mb-4 d-none">
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
                         <h4 class="mb-0">Automations</h4>
